# nano-agent

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  publish.yml
examples/basic_chatbot/: Cargo.toml  README.md
examples/basic_chatbot/src/: main.rs
examples/deep_research/: Cargo.toml  README.md
examples/deep_research/src/: main.rs
examples/orchestration_agent/: Cargo.toml  README.md
examples/orchestration_agent/src/: main.rs
nano_agent/: Cargo.toml
nano_agent/src/: lib.rs
nano_agent/src/context/: chat_history.rs  context_provider.rs  mod.rs  system_prompt_generator.rs
nano_agent/src/tools/: calculator.rs  mod.rs  searxng_search.rs  webpage_scraper.rs
nano_agent/src/tools/duckduckgo_search/: mod.rs
