[workspace]
members = [
    "nano_agent",
    "examples/basic_chatbot",
    "examples/deep_research",
    "examples/orchestration_agent"
]
resolver = "3"

[workspace.dependencies]
nano-agent = { path = "nano_agent" }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
