[package]
name = "nano-agent"
version.workspace = true
edition.workspace = true
description = "Lightweight Rust framework for building AI agents."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/tamaroning/nano-agent"
keywords = ["ai", "agent", "llm", "genai"]
rust-version = "1.85"
include = ["Cargo.toml", "LICENSE", "src/**/*", "../README.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
searxng = ["dep:reqwest"]
calculator = ["dep:meval"]
webpage_scraper = [
    "dep:reqwest",
    "dep:readability",
    "dep:htmd",
    "dep:scraper",
    "dep:url",
]

[dependencies]
async-trait = "0.1"
genai = "0.5"
htmd = { version = "0.5", optional = true }
meval = { version = "0.2", optional = true }
readability = { version = "0.3", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, optional = true, features = ["json", "rustls-tls"] }
scraper = { version = "0.22", optional = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0"
tracing = { workspace = true }
url = { version = "2.5", optional = true }

[dev-dependencies]
